Commands voice control

--- a/appsettings.json
+++ b/appsettings.json
@@ -32,7 +32,7 @@
       "activity": "watching"
     },
     {
-      "name": "Драколоис не милый :b",
+      "name": "Драколис не милый :b",
       "activity": "game"
     }
   ]
