Commands voice control and logs update

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,14 +2,20 @@
   "token_bot": "",
   "main_guild": 0,
   "prefix": "$",
+  "Logging": "DEBUG",
+
+
   "extension": [
     "cogs.role_giver_command",
     "cogs.fun_command",
     "cogs.role_event",
     "cogs.music",
     "cogs.voice_command",
-    "cogs.voice_event"
+    "cogs.voice_event",
+    "cogs.error_handler_app"
   ],
+
+
   "game_activity": [
     {
       "name": "трусиках пальчиками", 
