--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,11 @@
   "main_guild": 0,
   "prefix": "$",
   "Logging": "DEBUG",
+  "is_owner": 0,
+  "developer_mode": false,
 
+  "API_TOKEN_E621": "",
+  "USER_E621": "",
 
   "extension": [
     "cogs.role_giver_command",
@@ -12,7 +16,9 @@
     "cogs.music",
     "cogs.voice_command",
     "cogs.voice_event",
-    "cogs.error_handler_app"
+    "cogs.error_handler_app",
+    "cogs.nsfw_command",
+    "cogs.tools_command"
   ],
 
 
