Огромный и сырой коммит бота, (можно тестировать)

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,8 @@
   "API_TOKEN_E621": "",
   "USER_E621": "",
 
+  "API_TOKEN_DERPIBOORU": "aENiaoMQW4wKc2Z4Ovco",
+
   "extension": [
     "cogs.role_giver_command",
     "cogs.fun_command",
